// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQL recipes (task 5b.3) > runs verbatim: Ancestors of a span #2 1`] = `
{
  "columns": [
    "depth",
    "session_id",
    "trace_id",
    "span_id",
    "parent_span_id",
  ],
  "rows": [
    [
      0,
      "s-api",
      "t-cycle",
      "a",
      "b",
    ],
    [
      1,
      "s-api",
      "t-cycle",
      "b",
      "a",
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Ancestors of a span 1`] = `
{
  "columns": [
    "depth",
    "session_id",
    "trace_id",
    "span_id",
    "parent_span_id",
  ],
  "rows": [
    [
      0,
      "s-api",
      "t-checkout",
      "query",
      "handle",
    ],
    [
      1,
      "s-api",
      "t-checkout",
      "handle",
      "req",
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Cross-session parent candidates 1`] = `
{
  "columns": [
    "trace_id",
    "child_session",
    "child_span",
    "parent_span_id",
    "candidate_session",
  ],
  "rows": [
    [
      "t-checkout",
      "s-api",
      "handle",
      "req",
      "s-web",
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Errors by kind 1`] = `
{
  "columns": [
    "kind",
    "error_name",
    "errors",
    "session_traces",
  ],
  "rows": [
    [
      "function",
      "TimeoutError",
      2,
      1,
    ],
    [
      "function",
      "ValidationError",
      1,
      1,
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Per-request timeline 1`] = `
{
  "columns": [
    "seq",
    "session_id",
    "trace_id",
    "span_id",
    "depth",
    "type",
    "node_id",
    "ts",
  ],
  "rows": [
    [
      1,
      "s-web",
      "t-checkout",
      "req",
      0,
      "enter",
      "src/web/checkout.ts#submit",
      1000,
    ],
    [
      2,
      "s-web",
      "t-checkout",
      "validate",
      1,
      "enter",
      "src/web/validate.ts#validate",
      1010,
    ],
    [
      3,
      "s-web",
      "t-checkout",
      "validate",
      1,
      "exit",
      "src/web/validate.ts#validate",
      1030,
    ],
    [
      4,
      "s-web",
      "t-checkout",
      "req",
      0,
      "exit",
      "src/web/checkout.ts#submit",
      1250,
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Slowest spans 1`] = `
{
  "columns": [
    "session_id",
    "trace_id",
    "span_id",
    "node_id",
    "duration",
    "outcome",
  ],
  "rows": [
    [
      "s-web",
      "t-checkout",
      "req",
      "src/web/checkout.ts#submit",
      250,
      "exit",
    ],
    [
      "s-api",
      "t-checkout",
      "handle",
      "src/api/orders.ts#handle",
      100,
      "error",
    ],
    [
      "s-api",
      "t-checkout",
      "query",
      "src/api/db.ts#query",
      80,
      "error",
    ],
    [
      "s-web",
      "t-login",
      "login",
      "src/web/login.ts#login",
      50,
      "error",
    ],
    [
      "s-web",
      "t-checkout",
      "validate",
      "src/web/validate.ts#validate",
      20,
      "exit",
    ],
    [
      "s-web",
      "t-login",
      "audit",
      "src/web/audit.ts#audit",
      10,
      "exit",
    ],
  ],
}
`;

exports[`SQL recipes (task 5b.3) > runs verbatim: Value-equality candidates (not lineage) 1`] = `
{
  "columns": [
    "value",
    "ret_session",
    "ret_trace",
    "ret_span",
    "arg_session",
    "arg_trace",
    "arg_span",
  ],
  "rows": [
    [
      "order-7",
      "s-web",
      "t-checkout",
      "validate",
      "s-api",
      "t-checkout",
      "handle",
    ],
    [
      "order-7",
      "s-web",
      "t-checkout",
      "validate",
      "s-web",
      "t-login",
      "audit",
    ],
  ],
}
`;
